2010-07-08  Marco Randazzo  <marco.randazzo@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
	Added IImpedanceControl interface, IImpedanceControlRaw interface.
	The new methods allow to set the impedance (stiffness/damping) at
    the joint level. 
	
2010-07-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_dev/src/Drivers.cpp: change default name of 
	"quit" ports for yarpdev when no name argument is supplied.
	The device name will now be used.

	* src/libYARP_OS/src/Terminator.cpp: fix terminator to shut down
	cleanly.

2010-07-01  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpVersion.cmake: bump version: yarp-2.3.0

2010-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Port.h: add setTimeout flag
	(thanks Stephane for prodding me into doing this).

2010-06-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Property.cpp: add missing fclose, caused
	by botched conversion of fstream to stdio - thanks Gianluca
	Massera!

2010-06-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/stressTests/stress_name_server/stress_name_server.cpp:
	stress-test persistent connections.

	* src/yarpserver/src/Subscriber.h: fully implement persistent
	connections.

2010-06-21 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.inl
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    * src/libYARP_dev/src/ServerControlBoard.cpp
    * src/modules/fakebot/FakeBot.h
    
    Added getAmpStatus(int, int*)/getAmpStatusRaw() for single joint to interface.
    Fixed modules using it.

